--- a/html/index.html
+++ b/html/index.html
@@ -380,7 +380,9 @@
           </div>
         </div>
         <div class="col-lg-8 py-3">
-          <p class="text-center" id="copyright">Copyright &copy; 2022 for DesiQnA. This Webpage is designed and developed by <a href="https://www.linkedin.com/in/bhargab-sarmah-077563152/" target="_blank">Bhargab Sarmah</a></p>
+          <p class="text-center" id="copyright">Copyright &copy; 2022 for DesiQnA. This Webpage is designed and developed by <a href="https://www.linkedin.com/in/harsh-tosawad-1a92611a9
+
+/" target="_blank">Harsh Tosawad</a></p>
         </div>
     </div>
   </footer>
