--- a/html/index.html
+++ b/html/index.html
@@ -369,7 +369,7 @@
       <div class="row mb-5">
         <div class="col-lg-8 py-3">
           <h3>Desi<span class="text-primary">QnA.</span></h3>
-          <p>This webpage ownership is under Desi QnA. You can connect with Desi QnA team on below handles</p>
+          <p>This webpage ownership is under Desi QnA. You can connect with the Desi QnA team on the below handles</p>
 
           <div class="social-media-button">
             <a href="#"><span class="mai-logo-facebook-f"></span></a>
